--- a/src/app/scatter-chart/scatter-chart.component.html
+++ b/src/app/scatter-chart/scatter-chart.component.html
@@ -1,9 +1,14 @@
-<p>scatter-chart works!</p>
-<figure id="scatter"></figure>
-<form [formGroup]="dateForm">
-    <mat-form-field>
-        <input formControlName="date" matInput [matDatepicker]="picker" placeholder="Choose a date" (dateInput)="this.drawChart()">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-</form>
+<div class="flex flex-row justify-center">
+    <div class="flex flex-col">
+        <figure id="scatter"></figure>
+        <form [formGroup]="dateForm">
+            <mat-form-field>
+                <input formControlName="date" matInput [matDatepicker]="picker" placeholder="Choose a date" (dateInput)="this.drawChart()">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </form>
+    </div>
+    <p>{{this.currentProductId}}</p>
+    <app-select-category (changeProduct)="changeProduct($event)"></app-select-category>
+</div>
