feat(level4): Added the login page with credentials logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div class="ml-10 mt-5 text-2xl">
-    <span>Analytics</span>
-</div>
-<app-scatter-chart></app-scatter-chart>
+<banner></banner>
+<router-outlet></router-outlet>
