--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,24 @@
+<banner [username]="this.sessionUser" (logout)="logout()"></banner>
 <div class="flex flex-row justify-center">
     <div class="flex flex-col">
         <figure id="onlineDemand"></figure>
         <figure id="averageSearchVolume"></figure>
+    </div>
+    <div class="flex flex-col">
         <form [formGroup]="dateForm">
             <mat-form-field>
-                <input formControlName="date" matInput [matDatepicker]="picker" placeholder="Choose a date" (dateInput)="this.drawCharts()">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-label>Beginning date</mat-label>
+                <input formControlName="startDateInput" matInput [matDatepicker]="pickerStartDate" placeholder="Choose a date" (dateInput)="this.drawCharts()">
+                <mat-datepicker-toggle matSuffix [for]="pickerStartDate"></mat-datepicker-toggle>
+                <mat-datepicker #pickerStartDate></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field class="ml-2">
+                <mat-label>End date</mat-label>
+                <input formControlName="endDateInput" matInput [matDatepicker]="pickerEndDate" placeholder="Choose a date" (dateInput)="this.drawCharts()">
+                <mat-datepicker-toggle matSuffix [for]="pickerEndDate"></mat-datepicker-toggle>
+                <mat-datepicker #pickerEndDate></mat-datepicker>
             </mat-form-field>
         </form>
+        <app-select-category (changeProduct)="changeProduct($event)"></app-select-category>
     </div>
-    <app-select-category (changeProduct)="changeProduct($event)"></app-select-category>
 </div>
