--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -3,15 +3,10 @@
     border-radius: 10px;
     padding: 40px;
     width: 400px;
-    height: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 350px;
 }
 
-.container {
+.login-page {
     display: flex;
     justify-content: center;
     align-items: center;
