--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { width: 100%; height: 100%; }
+body { 
+    margin: 0; 
+}
+
+body * {
+    font-family: 'Montserrat', sans-serif;
+}
